--- a/.env
+++ b/.env
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=admstudiovimana@gmail.com
-MAIL_PASSWORD=xihixhqjrfpetdez
+MAIL_USERNAME=sistema.vmin@gmail.com
+MAIL_PASSWORD=bxafqpibgqqevgnt
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=info@vimana.studio
+MAIL_FROM_ADDRESS=test@test.com
 MAIL_FROM_NAME="Sistema Vadmin"
 
 #-- Mercado Libre Api --
