--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,7 +3,6 @@
     "/css/web.css": "/css/web.css",
     "/css/store-custom.css": "/css/store-custom.css",
     "/css/vadmin.css": "/css/vadmin.css",
-    "/js/vadmin-ui.js": "/js/vadmin-ui.js",
-    "/js/vadmin-functions.js": "/js/vadmin-functions.js",
-    "/js/vadmin-forms.js": "/js/vadmin-forms.js"
+    "/js/vadmin-forms.js": "/js/vadmin-forms.js",
+    "/js/vadmin.js": "/js/vadmin.js"
 }
